Add all "static" pages from the current site.
And enable domain name.

Including topics - but just as a todo.

Remove more mysociety bits from index.

--- a/_includes/base/mysoc_header.html
+++ b/_includes/base/mysoc_header.html
@@ -3,6 +3,7 @@
     <div class="ms-header">
         <nav class="ms-header__row">
             <a class="ms-header__logo" href="https://www.mysociety.org">mySociety</a>
+            <!-- <img src="https://www.opendataphilly.org/img/odp-logo@2x.png" alt="OpenDataPhilly"> -->
         </nav>
     </div>
 
